--- a/_posts/2017-06-06-ssh框架搭建.md
+++ b/_posts/2017-06-06-ssh框架搭建.md
@@ -6,31 +6,31 @@ categories: [Java]
 
 ## 思路
 
-具体项目中一般是web调用services，services调用dao
+具体项目中一般是 web 调用 services，services 调用 dao
 
-在web层采用struts2，在services层采用Spring，在DAO层采用hibernate
+在 web 层采用 struts2，在 services 层采用 Spring，在 DAO 层采用 hibernate
 
 因此整合分为两个步骤
 
-1. Spring和struts2整合
+1. Spring 和 struts2 整合
 
-    把Action创建交给SpringIOC 并且不能是单例模式
+   把 Action 创建交给 SpringIOC 并且不能是单例模式
 
-+ Spring和Hibernate整合
+- Spring 和 Hibernate 整合
 
-    spring配置数据源
+  spring 配置数据源
 
-    spring生成sessionFactory，把数据源注入到sessionFactory，同时指定hibernate核心配置文件位置
+  spring 生成 sessionFactory，把数据源注入到 sessionFactory，同时指定 hibernate 核心配置文件位置
 
-## Spring和struts2整合
+## Spring 和 struts2 整合
 
-### 导入相关jar包
+### 导入相关 jar 包
 
 ![01](01.jpg)
 
-### 配置Spring随启动加载
+### 配置 Spring 随启动加载
 
-+ 创建spring.xml
+- 创建 spring.xml
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -54,30 +54,30 @@ categories: [Java]
         http://www.springframework.org/schema/mvc/spring-mvc.xsd
         http://www.springframework.org/schema/task
         http://www.springframework.org/schema/task/spring-task.xsd">
-        
+
 </beans>
 ```
 
-+ 在web.xml配置启动时加载配置
+- 在 web.xml 配置启动时加载配置
 
 ```xml
 <context-param>
-	<param-name>contextConfigLocation</param-name>
-	<param-value>classpath:spring.xml</param-value>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:spring.xml</param-value>
 </context-param>
 
 <listener>
-	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 </listener>
 ```
 
-### 搭建Struts环境
+### 搭建 Struts 环境
 
-+ 创建Action测试类
+- 创建 Action 测试类
 
-+ 创建struts配置文件
+- 创建 struts 配置文件
 
-+ 在web.xml设置struts过滤器
+- 在 web.xml 设置 struts 过滤器
 
 ```xml
 <filter>
@@ -93,32 +93,32 @@ categories: [Java]
 
 ### 整合
 
-+ 用IOC的方式生成Action
+- 用 IOC 的方式生成 Action
 
-```xml
-<!-- 用Spring生成action对象，注意不要是默认的单例 -->
-<bean id="userAction" class="action.UserAction" scope="prototype"></bean>
-```
+  ```xml
+  <!-- 用Spring生成action对象，注意不要是默认的单例 -->
+  <bean id="userAction" class="action.UserAction" scope="prototype"></bean>
+  ```
 
-+ 在struts中使用生成的Action对象
+- 在 struts 中使用生成的 Action 对象
 
-```xml
-<package name="demo" extends="struts-default" namespace="/">
-    <!-- 注意在class能不能写类路径，这样会创建两次，应为spring已经创建好了，写在Spring中创建的对象id名 -->
-    <!-- 在struts2-spring-plugin中提供了这个功能 -->
-    <action name="userAction" class="userAction"></action>
-</package>
-```
+  ```xml
+  <package name="demo" extends="struts-default" namespace="/">
+      <!-- 注意在class能不能写类路径，这样会创建两次，应为spring已经创建好了，写在Spring中创建的对象id名 -->
+      <!-- 在struts2-spring-plugin中提供了这个功能 -->
+      <action name="userAction" class="userAction"></action>
+  </package>
+  ```
 
-## Spring和Hibernate整合
+## Spring 和 Hibernate 整合
 
-### 导入相关jar包
+### 导入相关 jar 包
 
-除了hibernate的基本jar包外，还需要数据库连接池（非必须）及spring-orm.jar的配合
+除了 hibernate 的基本 jar 包外，还需要数据库连接池（非必须）及 spring-orm.jar 的配合
 
 ![02](02.jpg)
 
-### 在Spring配置中配置连接池
+### 在 Spring 配置中配置连接池
 
 ```xml
 <bean id="dataSource" class="com.mchange.v2.c3p0.ComboPooledDataSource" destroy-method="close">
@@ -129,20 +129,20 @@ categories: [Java]
 </bean>
 ```
 
-### 生成sessionFactory对象
+### 生成 sessionFactory 对象
 
-1. 服务器启动时加载spring配置文件(之间做好了)，再在Spring中配置加载hibernate配置
+1. 服务器启动时加载 spring 配置文件(之间做好了)，再在 Spring 中配置加载 hibernate 配置
 
-2. 在spring配置文件中生成sessionFactory对象（单例）
+2. 在 spring 配置文件中生成 sessionFactory 对象（单例）
 
-由于sessionFactory并不是直接new出来的而是多行代码实现的，所以不能直接用ioc创建
+由于 sessionFactory 并不是直接 new 出来的而是多行代码实现的，所以不能直接用 ioc 创建
 
 ```java
 configuration = new Configuration().configure();
 sessionFactory = configuration.buildSessionFactory();
 ```
 
-好在Spring提供了一个对象来生成sessionFactory。当引用这个LocalSessionFactoryBean 的时候，比如`applicationContext.getBean("localSessionFactoryBean")`这样，spring返回的不是LocalSessionFactoryBean 本身，他会自动调用getObject()这个方法，把真正的session factory返回。所以只需要做如下配置
+好在 Spring 提供了一个对象来生成 sessionFactory。当引用这个 LocalSessionFactoryBean 的时候，比如`applicationContext.getBean("localSessionFactoryBean")`这样，spring 返回的不是 LocalSessionFactoryBean 本身，他会自动调用 getObject()这个方法，把真正的 session factory 返回。所以只需要做如下配置
 
 ```xml
 <bean id="sessionFactory"  class="org.springframework.orm.hibernate4.LocalSessionFactoryBean">
@@ -153,76 +153,72 @@ sessionFactory = configuration.buildSessionFactory();
 </bean>
 ```
 
-### 配置hibernate
+### 配置 hibernate
 
 1. 建立实体类
 
-    ```java
-    public class User {
+   ```java
+   public class User {
 
-        private int id;
-        private String name;
-        private String birthday;
-        private int score;
-        //getter/setter方法
-    }
-    ```
+       private int id;
+       private String name;
+       private String birthday;
+       private int score;
+       //getter/setter方法
+   }
+   ```
 
-2. 为实体类建立hibernate配置文件
+2. 为实体类建立 hibernate 配置文件
 
-    ```xml
-    <?xml version="1.0" encoding="UTF-8"?>
-    <!DOCTYPE hibernate-mapping PUBLIC 
-        "-//Hibernate/Hibernate Mapping DTD 3.0//EN"
-        "http://www.hibernate.org/dtd/hibernate-mapping-3.0.dtd">
+   ```xml
+   <?xml version="1.0" encoding="UTF-8"?>
+   <!DOCTYPE hibernate-mapping PUBLIC "-//Hibernate/Hibernate Mapping DTD 3.0//EN" "http://www.hibernate.org/dtd/hibernate-mapping-3.0.dtd">
 
-    <hibernate-mapping>
-        <!-- 配置类和表对应 -->
-        <class name="entity.User" table="user">
-            <!-- 配置主键 -->
-            <id name="id" column="id">
-                <!-- 设置数据库表主键增长策略 -->
-                <generator class="native"></generator>
-            </id>
-            <!-- 配置其他属性和表字段对应 -->
-            <property name="name" column="name"></property>
-            <property name="birthday" column="birthday"></property>
-            <property name="score" column="score"></property>
-        </class>
-    </hibernate-mapping>
-    ```
+   <hibernate-mapping>
+       <!-- 配置类和表对应 -->
+       <class name="entity.User" table="user">
+           <!-- 配置主键 -->
+           <id name="id" column="id">
+               <!-- 设置数据库表主键增长策略 -->
+               <generator class="native"></generator>
+           </id>
+           <!-- 配置其他属性和表字段对应 -->
+           <property name="name" column="name"></property>
+           <property name="birthday" column="birthday"></property>
+           <property name="score" column="score"></property>
+       </class>
+   </hibernate-mapping>
+   ```
 
-3. 创建hibernate核心配置文件
+3. 创建 hibernate 核心配置文件
 
-    ```
-    <?xml version="1.0" encoding="UTF-8"?>
-    <!DOCTYPE hibernate-configuration PUBLIC
-        "-//Hibernate/Hibernate Configuration DTD 3.0//EN"
-        "http://www.hibernate.org/dtd/hibernate-configuration-3.0.dtd">
-    <hibernate-configuration>
-        <session-factory>
-            <!-- spring里配置数据库信息 -->
-            
-            <!-- 显示生成的sql语句 ，并格式化-->
-            <property name="hibernate.show_sql">true</property>
-            <property name="hibernate.format_sql">true</property>
-            
-            <!-- 配置自动创建表 -->
-            <property name="hibernate.hbm2ddl.auto">update</property>
-            
-            <!-- 配置所使用的数据库的方言 -->
-            <property name="hibernate.dialect">org.hibernate.dialect.MySQL5InnoDBDialect</property>
-            
-            <!-- 3.配置映射文件-->
-            <mapping resource="entity/User.hbm.xml"/>
-            
-        </session-factory>
-    </hibernate-configuration>
-    ```
+   ```xml
+   <?xml version="1.0" encoding="UTF-8"?>
+   <!DOCTYPE hibernate-configuration PUBLIC "-//Hibernate/Hibernate Configuration DTD 3.0//EN" "http://www.hibernate.org/dtd/hibernate-configuration-3.0.dtd">
+   <hibernate-configuration>
+       <session-factory>
+           <!-- spring里配置数据库信息 -->
 
-### dao和service的注入
+           <!-- 显示生成的sql语句 ，并格式化-->
+           <property name="hibernate.show_sql">true</property>
+           <property name="hibernate.format_sql">true</property>
 
-Action注入Service，Service注入Dao(Impl)，DaoImp注入sessionFactory
+           <!-- 配置自动创建表 -->
+           <property name="hibernate.hbm2ddl.auto">update</property>
+
+           <!-- 配置所使用的数据库的方言 -->
+           <property name="hibernate.dialect">org.hibernate.dialect.MySQL5InnoDBDialect</property>
+
+           <!-- 3.配置映射文件-->
+           <mapping resource="entity/User.hbm.xml"/>
+
+       </session-factory>
+   </hibernate-configuration>
+   ```
+
+### dao 和 service 的注入
+
+Action 注入 Service，Service 注入 Dao(Impl)，DaoImp 注入 sessionFactory
 
 ```xml
 <!-- 用Spring生成action对象，注意不要是默认的单例 -->
@@ -242,7 +238,7 @@ Action注入Service，Service注入Dao(Impl)，DaoImp注入sessionFactory
 
 ## 测试
 
-userAction中的代码
+userAction 中的代码
 
 ```java
 @Override
@@ -252,7 +248,7 @@ public String execute() throws Exception {
 }
 ```
 
-userService代码
+userService 代码
 
 ```java
 public void addUser(String name,String brithday,int score){
@@ -260,22 +256,22 @@ public void addUser(String name,String brithday,int score){
 }
 ```
 
-userDaoImpl代码
+userDaoImpl 代码
 
 ```java
 @Override
 public void add(String name, String brithday, int score) {
-	Session session = sessionFactory.openSession();
-	User u = new User();
-	u.setName(name);
-	u.setBirthday(brithday);
-	u.setScore(score);
-	session.save(u);
-	session.close();
+    Session session = sessionFactory.openSession();
+    User u = new User();
+    u.setName(name);
+    u.setBirthday(brithday);
+    u.setScore(score);
+    session.save(u);
+    session.close();
 }
 ```
 
-通过url访问action,查看数据库是否添加了数据
+通过 url 访问 action,查看数据库是否添加了数据
 
 ![03](03.jpg)
 
@@ -286,12 +282,11 @@ public void add(String name, String brithday, int score) {
 <bean id="transactionManager" class="org.springframework.orm.hibernate4.HibernateTransactionManager">
     <property name="sessionFactory" ref="sessionFactory"></property>
 </bean>
-
 <!-- 开启事务注解 -->
 <tx:annotation-driven transaction-manager="transactionManager"/>
 ```
 
-在UserService中添加注解
+在 UserService 中添加注解
 
 ```java
 @Transactional
@@ -300,9 +295,9 @@ public class UserService {
 }
 ```
 
-## 使用HibernateTemplate
+## 使用 HibernateTemplate
 
-生成HibernateTemplate，并在userDaoImpl中注入HibernateTemplate
+生成 HibernateTemplate，并在 userDaoImpl 中注入 HibernateTemplate
 
 ```xml
 <bean id="userDaoImpl" class="dao.UserDaoImpl">
@@ -314,25 +309,25 @@ public class UserService {
 </bean>
 ```
 
-在UserDaoImpl.java里使用HibernateTemplate
+在 UserDaoImpl.java 里使用 HibernateTemplate
 
 ```java
 public class UserDaoImpl implements UserDao {
 
-	private HibernateTemplate hibernateTemplate;
+    private HibernateTemplate hibernateTemplate;
 
-	public void setHibernateTemplate(HibernateTemplate hibernateTemplate) {
-		this.hibernateTemplate = hibernateTemplate;
-	}
+    public void setHibernateTemplate(HibernateTemplate hibernateTemplate) {
+        this.hibernateTemplate = hibernateTemplate;
+    }
 
-	@Override
-	public void add(String name, String brithday, int score) {
-		User u = new User();
-		u.setName(name);
-		u.setBirthday(brithday);
-		u.setScore(score);
-		hibernateTemplate.save(u);
-	}
+    @Override
+    public void add(String name, String brithday, int score) {
+        User u = new User();
+        u.setName(name);
+        u.setBirthday(brithday);
+        u.setScore(score);
+        hibernateTemplate.save(u);
+    }
 }
 ```
 
@@ -342,7 +337,7 @@ public class UserDaoImpl implements UserDao {
 HTTP Status 500 - Could not open Hibernate Session for transaction; nested exception is java.lang.NoClassDefFoundError: org/hibernate/engine/transaction/spi/TransactionContext
 ```
 
-原因是配置文件中用的是hibernate4,而导入的包是5.x的
+原因是配置文件中用的是 hibernate4,而导入的包是 5.x 的
 
 ```xml
 <!-- 创建事务管理器 -->
@@ -351,50 +346,50 @@ HTTP Status 500 - Could not open Hibernate Session for transaction; nested excep
 </bean>
 ```
 
-解决方法1：将hibernate-core-5.1.39.Final.jar换成hibernate-core-4.2.4.Final.jar
+解决方法 1：将 hibernate-core-5.1.39.Final.jar 换成 hibernate-core-4.2.4.Final.jar
 
-解决方法2：使用高版本的spring会支持org.springframework.orm.hibernate5.HibernateTransactionManager
+解决方法 2：使用高版本的 spring 会支持 org.springframework.orm.hibernate5.HibernateTransactionManager
 
-这里使用的是方法1
+这里使用的是方法 1
 
 ## 另一种整合方式
 
-还有一种整合方式是把hibernate核心配置全部都放到spring中,不需要再建立hibernate核心配置文件了
+还有一种整合方式是把 hibernate 核心配置全部都放到 spring 中,不需要再建立 hibernate 核心配置文件了
 
 ```xml
 <bean id="sessionFactory"  class="org.springframework.orm.hibernate4.LocalSessionFactoryBean">
-	<!-- 注入数据源 -->
-	<property name="dataSource" ref="dataSource"></property>
-	
-	<property name="hibernateProperties">
-		<props>
-			<prop key="hibernate.show_sql">true</prop>
-			<prop key="hibernate.format_sql">true</prop>
-			<prop key="hibernate.hbm2ddl.auto">update</prop>
-			<prop key="hibernate.dialect">org.hibernate.dialect.MySQL5InnoDBDialect</prop>
-		</props>
-	</property>
-	<property name="mappingResources">
-		<list>
-			<value>entity/User.hbm.xml</value>
-		</list>
-	</property>
+    <!-- 注入数据源 -->
+    <property name="dataSource" ref="dataSource"></property>
+
+    <property name="hibernateProperties">
+        <props>
+            <prop key="hibernate.show_sql">true</prop>
+            <prop key="hibernate.format_sql">true</prop>
+            <prop key="hibernate.hbm2ddl.auto">update</prop>
+            <prop key="hibernate.dialect">org.hibernate.dialect.MySQL5InnoDBDialect</prop>
+        </props>
+    </property>
+    <property name="mappingResources">
+        <list>
+            <value>entity/User.hbm.xml</value>
+        </list>
+    </property>
 </bean
 ```
 
 ## 注解方式搭建
 
-引入struts2-convention依赖，让struts配置文件中取消对Action的配置
+引入 struts2-convention 依赖，让 struts 配置文件中取消对 Action 的配置
 
 Spring 自动扫包
 
-```
+```xml
 <context:component-scan base-package="dao.daoImpl" />
 ```
 
-daoImpl添加注解标签
+daoImpl 添加注解标签
 
-```
+```java
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Component;
 import dao.UserDao;
@@ -402,16 +397,16 @@ import dao.UserDao;
 @Component(value="UserDaoImpl")
 @Scope(value="singleton")
 public class UserDaoImpl implements UserDao{
-	@Override
-	public void sayHello() {
-		System.out.println("Hello");
-	}
+    @Override
+    public void sayHello() {
+        System.out.println("Hello");
+    }
 }
 ```
 
-在Action里装配dao
+在 Action 里装配 dao
 
-```
+```java
 import javax.annotation.Resource;
 import org.apache.struts2.convention.annotation.Action;
 import org.apache.struts2.convention.annotation.Result;
@@ -420,20 +415,20 @@ import com.opensymphony.xwork2.ActionSupport;
 import dao.UserDao;
 
 @Results({
-	@Result(name="ok",location="/test.jsp"),  
-	@Result(name="failure",location="/failure.jsp")})
+    @Result(name="ok",location="/test.jsp"),
+    @Result(name="failure",location="/failure.jsp")})
 @Action(value="test")
 public class UserAction extends ActionSupport{
-	
-	private static final long serialVersionUID = 1L;
-	
-	@Resource(name="UserDaoImpl")
-	UserDao userDao;
-	
-	@Override
-	public String execute() throws Exception {
-		userDao.sayHello();
-		return "ok";
-	}
+
+    private static final long serialVersionUID = 1L;
+
+    @Resource(name="UserDaoImpl")
+    UserDao userDao;
+
+    @Override
+    public String execute() throws Exception {
+        userDao.sayHello();
+        return "ok";
+    }
 }
 ```
