--- a/_posts/2019-04-21-go-web项目打包为一个文件.md
+++ b/_posts/2019-04-21-go-web项目打包为一个文件.md
@@ -8,23 +8,31 @@ categories: [Go]
 
 尤其是打包，对于一些后台服务，打包成一个文件部署起来很是方便
 
-但是在进行 web 开发时，必然会有静态资源文件，部署时就要把静态目录和打包后的二进制文件都上传到服务器。一台服务器还好，要是有多台服务器上传静态文件也是一件很麻烦的时。
+但是在进行 web 开发时，必然会有静态资源文件，部署时就要把静态目录和打包后的二进制文件都上传到服务器。一台服务器还好，要是有多台服务器上传静态文件也是一件很麻烦的事情
 
 去网上搜了下竟然还真有工具和把静态文件打包到二进制文件的，原理就是把静态资源生成一个很大的 go 文件（把文件进行字符编码），然后再引入到项目中，最后实现文件接口在读取文件时候从代码中读取文件
 
+## 安装工具
+
+安装打包工具 go-bindata 到`GOPATH/bin`中
+
+```sh
+# ... 检查所有目录下的main包编译可执行文件
+go get -u github.com/jteeuwen/go-bindata/...
+```
+
+如果使用 go mod 一定要在项目外执行安装，因为这不是项目的代码依赖，同时需要指定为 master 分支，默认是安装最新的 tag，但是最新的 tag 的代码太老了，缺少`AssetInfo()`方法
+
+```sh
+go get -u github.com/jteeuwen/go-bindata/...@master
+```
+
 ## 安装依赖
 
-下载依赖
+`go-bindata`只是把静态文件转化成 go 文件，在代码中读取这些静态文件需要使用`go-bindata-assetfs`
 
-```
-go get -u github.com/jteeuwen/go-bindata
+```sh
 go get -u github.com/elazarl/go-bindata-assetfs
-```
-
-安装 go-bindata 到`GOPATH/bin`中
-
-```
-go install github.com/jteeuwen/go-bindata/go-bindata
 ```
 
 ## 使用
@@ -70,10 +78,4 @@ func main() {
 
 如果只需要简单地读文件,可以不使用`go-bindata-assetfs`，因为`go-bindata`生成的 go 文件本身提供的一些方法返回文件的`[]byte`内容，可以根据需求自已去拿
 
-## 总结
-
-静态文件一共 30M，最终打包生成了 19M 的文件，这也算是一个优点了
-
-使用起来还是挺方便的，每次静态文件改动的话在打包前记得重新执行`go-bindata`命令
-
-以后在做工具时候可以提供一个 web 界面，不用再搞那么麻烦的 gui 了
+每次静态文件改动的话在打包前记得重新执行`go-bindata`命令
