--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -537,6 +537,41 @@ npm config set cache "/usr/local/nodejs/node_cache"
 npm install -g hexo-cli
 ```
 
+## Shadowsocks
+
+推荐安装 SSR，图省事可以使用[一键安装脚本](ssr.sh)
+
+```
+yum -y install epel-release
+yum -y install python-pip
+pip install --upgrade pip
+pip install shadowsocks
+```
+
+编写配置文件
+
+```json
+{
+  "server": "my_server_ip",
+  "server_port": 8388,
+  "local_address": "127.0.0.1",
+  "local_port": 1080,
+  "password": "mypassword",
+  "timeout": 300,
+  "method": "aes-256-cfb",
+  "fast_open": false
+}
+```
+
+```sh
+# 前台运行
+ssserver -c shadowsocks.json
+
+# 后台运行
+ssserver -c shadowsocks.json -d start
+ssserver -c shadowsocks.json -d stop
+```
+
 ## 设置开机自启动脚本
 
 开机启动后要执行的命令可以追加在`rc.local`后面，如下
