--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -50,8 +50,12 @@ yum install lrzsz
 - 关闭防火墙
 
   ```sh
-  service iptables stop  #停止服务
-  chkconfig iptables off  #开机不再启动
+  # CentOS6
+  systemctl stop iptables #停止服务
+  systemctl disable iptables #开机不再启动
+  # CentOS7
+  systemctl stop firewalld
+  systemctl disable firewalld
   ```
 
 ### 更改 ssh 端口
@@ -83,35 +87,13 @@ vi /etc/locale.conf
 
 ### 安装
 
+configure 的过程如果有缺少依赖直接 yum 安装即可
+
 ```sh
 wget http://nginx.org/download/nginx-1.14.2.tar.gz
 tar -zxvf nginx-1.14.2.tar.gz
 cd nginx-1.14.2/
 ./configure --prefix=/usr/local/nginx --with-http_stub_status_module --with-http_ssl_module --with-file-aio --with-http_realip_module
-make
-make install
-```
-
-configure 的过程可能会有下面的报错,安装好依赖就行了
-
-the HTTP rewrite module requires the PCRE library
-
-```sh
-wget ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-8.39.tar.gz
-tar -zxvf pcre-8.39.tar.gz
-cd pcre-8.39
-./configure
-make
-make install
-```
-
-the HTTP gzip module requires the zlib library
-
-```sh
-wget http://zlib.net/zlib-1.2.8.tar.gz
-tar -zxvf zlib-1.2.8.tar.gz
-cd zlib-1.2.8
-./configure
 make
 make install
 ```
