--- a/_posts/2018-07-28-GO的包管理和构建.md
+++ b/_posts/2018-07-28-GO的包管理和构建.md
@@ -27,7 +27,7 @@ import org.dom4j.DocumentException;
 
 GO 编译器依次会去 GOROOT/src，GOPATH1/src，GOPATH2/src ... 下去寻找名为 fmt 的文件夹
 
-下面有许多的 go 文件，所有的以大写开头的变量，函数，结构等等的都会被导出
+文件夹下面有许多的 go 文件，所有的以大写开头的变量，函数，结构等都具有访问权限
 
 `fmt.Println()`的 Println 其实是 print.go 里的一个方法
 
@@ -179,11 +179,8 @@ go 1.12
 require gopkg.in/yaml.v2 v2.2.2
 # exclude 排除依赖，多个项目依赖同一个项目的不同版本，可以设置排除某个版本
 # replace 有时候网络不行的时候可以把golang.org/x/.. 下的包 使用github.com/golang/x进行替换
+# replace 也可以替换为本地项目路径
 ```
-
-关于依赖默认下载最新版本，你也可以指定版本号，前提是所依赖的项目打了 tag
-
-当使用`go get -m [packages]`会将下载的依赖包放到`GOPATH/pkg/mod`目录下，并且将依赖写入到 go.mod 文件。`go get -u=patch`会更新主模块下的所有依赖包。
 
 终端输入`go mod`可以查看所支持的命令，下面是几个常用的命令
 
@@ -217,3 +214,53 @@ auto: 只有当前目录在`GOPATH/src`目录之外而且当前目录包含`go.m
 ```
 go get -u golang.org/x/tools/cmd
 ```
+
+## Go Get 变化
+
+有了 Go Mod 后，`go get`的功能也有些许变化
+
+在非 go mod 项目下，使用相当于执行 git clone + go install
+
+go mod 项目下，，依赖会被下载的到`GOPATH/pkg/mod`目录下的同时，也会在项目的 go.mod，go.sun 这个两个依赖描述文件中添加依赖的版本信息
+
+## 版本控制
+
+依赖的版本是使用 git 的 tag 来控制的，当`go get`的时候会优先使用最新 tag 对应的版本，即最新稳定版，你也可以指定版本号`go get -u xxx/xxx@1.0.1`
+
+如果没有 tag 的话会使用 master 分支最新提交，但是有时候`go get`下来的并不是 master 分支的最新代码，可能是由于 goproxy 缓存的原因。所以当升级项目后一定要更新 tag
+
+因此 tag 的起名需要符合规范`vMAJOR.MINOR.PATCH`
+
+- v 所有版本号都是 v 开头。
+- MAJOR 主版本号，如果有大的版本更新，导致 API 和之前版本不兼容
+- MINOR 次版本号，当你做了向下兼容的新 feature
+- PATCH 修订版本号，当你做了向下兼容的修复 bug fix
+
+对于没有 tag 的项目，系统会自动起一个版本号，一般是`v0.0.0-yyyymmddhhmmss-hash`
+
+## 升级 V2
+
+所有的`go get -u` 来升级项目依赖，只会在 MINOR 和 PATCH 上进行升级，不会进行 MAJOR 的升级
+
+同时你会发现 MAJOR 一般都是 0 或者 1，很少见到 v2.0.0 以上的项目
+
+应为这里有个规定`go get`下来的是 v0 和 v1 的最新版本，当升级到 v2，v3 时，依赖的路径有变化
+
+下面是一个项目在 v1 和 v2 下的依赖路径的差异
+
+```
+github.com/caddyserver/caddy v1.0.4
+github.com/caddyserver/caddy/v2 v2.0.0-beta9 // indirect
+```
+
+同时下面也是一个错误的指定版本的方式
+
+```
+go get -u github.com/caddyserver/caddy@v2.0.0-beta9
+# 正确做法
+go get -u github.com/caddyserver/caddy/v2@v2.0.0-beta9
+```
+
+所以自己的项目升级 v2 的最佳方式就是新建一个 v2 的分支，然后修改 go.mod 文件的第一行，在后面添加/v2。然后把项目内的对自己的依赖的 import 后面加上 v2，然后新建 v2.0.0 的 tag。
+
+这样的好处是新用户可以使用到最新的版本，同时 v1 的不用担心升级后 API 不兼容的问题，因为 v1 和 v2 用户的 mod name 不同
