--- a/_posts/2018-07-28-GO的包管理和构建.md
+++ b/_posts/2018-07-28-GO的包管理和构建.md
@@ -215,17 +215,34 @@ auto: 只有当前目录在`GOPATH/src`目录之外而且当前目录包含`go.m
 go get -u golang.org/x/tools/cmd
 ```
 
-## Go Get 变化
+# GOSUMDB
+
+在 Go 1.13 中新增的，可以用来校验你下载的库的哈希是否和官方的哈希值是否一样，避免被 proxy 给修改了
+
+默认的 GOSUMDB 服务器是 google 的，有时候会提示找不到，可以设置如下值来解决
+
+```
+# 关闭
+off
+# 国内的代理
+sum.golang.google.cn
+# 七牛云的代理
+goproxy.cn
+```
+
+## Go Get
 
 有了 Go Mod 后，`go get`的功能也有些许变化
 
-在非 go mod 项目下，使用相当于执行 git clone + go install
+go mod 项目下，执行`go get -u`，依赖会被下载的到`GOPATH/pkg/mod`目录，同时也会在项目的 go.mod，go.sun 这个两个依赖描述文件中添加依赖的版本信息
 
-go mod 项目下，，依赖会被下载的到`GOPATH/pkg/mod`目录下的同时，也会在项目的 go.mod，go.sun 这个两个依赖描述文件中添加依赖的版本信息
+go mod 项目下，`go get ./...`会查找依赖，并记录在 go.mod 文件中
 
-## 版本控制
+在任何路径下执行`go get domain/user/project/...`相当于`go get`和`go install`,命令行工具会安装到`$GOPATH/bin`中
 
-依赖的版本是使用 git 的 tag 来控制的，当`go get`的时候会优先使用最新 tag 对应的版本，即最新稳定版，你也可以指定版本号`go get -u xxx/xxx@1.0.1`
+## 依赖版本升级
+
+依赖的版本是使用 git 的 tag 来控制的，当`go get`的时候会优先使用最新 tag 对应的版本，即最新 v0 或者 v1 的稳定版，你也可以指定版本号`go get -u xxx/xxx@1.0.1`
 
 如果没有 tag 的话会使用 master 分支最新提交，但是有时候`go get`下来的并不是 master 分支的最新代码，可能是由于 goproxy 缓存的原因。所以当升级项目后一定要更新 tag
 
@@ -237,6 +254,10 @@ go mod 项目下，，依赖会被下载的到`GOPATH/pkg/mod`目录下的同时
 - PATCH 修订版本号，当你做了向下兼容的修复 bug fix
 
 对于没有 tag 的项目，系统会自动起一个版本号，一般是`v0.0.0-yyyymmddhhmmss-hash`
+
+- 运行 `go get -u` 将会升级到最新的次要版本或者修订版本
+- 运行 `go get -u=patch` 将会升级到最新的修订版本
+- 运行 `go get package@version`将会升级到指定的版本号
 
 ## 升级 V2
 
@@ -264,3 +285,9 @@ go get -u github.com/caddyserver/caddy/v2@v2.0.0-beta9
 所以自己的项目升级 v2 的最佳方式就是新建一个 v2 的分支，然后修改 go.mod 文件的第一行，在后面添加/v2。然后把项目内的对自己的依赖的 import 后面加上 v2，然后新建 v2.0.0 的 tag。
 
 这样的好处是新用户可以使用到最新的版本，同时 v1 的不用担心升级后 API 不兼容的问题，因为 v1 和 v2 用户的 mod name 不同
+
+## 参考
+
+[跳出 Go module 的泥潭](https://colobu.com/2018/08/27/learn-go-module/)
+
+[Go module 再回顾](https://colobu.com/2019/09/23/review-go-module-again/)
