--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -308,19 +308,30 @@ SHOW VARIABLES LIKE 'validate_password%';
 
 ### JDK 安装
 
-官网有下载 rpm 包，这里下载的是 jdk-8u191-linux-x64.rpm
+先查询是否已经安装了 JDK 环境
 
-会安装到`/usr/java/`目录下
-
-```sh
-# 先查询是否已经安装了 openjdk，有就卸载
-
+```bash
+rpm -qa | grep jdk
 rpm -qa | grep java
+yum -y remove java*
+```
 
-# 本地下载然后上传到服务器
+去 Oracle 官网下载 rpm 包，这里下载的是 jdk-8u191-linux-x64.rpm，默认会安装到`/usr/java/`目录下
 
+```bash
 rpm -ivh jdk-8u191-linux-x64.rpm
 ```
+
+另一种方案是安装 OpenJdk，使用 yum 就可以直接安装了
+
+```bash
+yum list java* | grep 1.8.0
+yum install java-1.8.0-openjdk-devel.x86_64
+# 默认安装到
+/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.232.b09-0.el7_7.x86_64
+```
+
+安装完成后，还会在`/usr/lib/jvm/`，`/etc/alternatives/`创建多个链接
 
 ### 环境变量配置
 
@@ -364,7 +375,11 @@ mv apache-tomcat-8.5.41 /usr/local/tomcat/
 /usr/local/tomcat/apache-tomcat-8.5.41/bin/startup.sh
 ```
 
-解决 centos7 没有足够的熵来用于产生随机数，导致 tomcat 启动超级慢
+如果在你的机器上运行`dd if=/dev/random of=random.dat count=40960`非常慢的话，tomcat 启动超级超级慢。
+系统会收集运行状态如流量，CPU，键盘录入等信息，来产生的熵去生成真正的随机数。
+由于大部分的云主机熵值都不够，导致启动时卡在这里。可以用 urandom(伪随机) 来替代 random 来生成随机数即可
+
+方法很简单，修改 Tomcat 的的启动参数，指定使用 urandom 或者修改 JDK 的配置指定使用 urandom
 
 ```sh
 vim $JAVA_HOME/jre/lib/security/java.security
