--- a/_posts/2018-07-28-GO的包管理和构建.md
+++ b/_posts/2018-07-28-GO的包管理和构建.md
@@ -118,17 +118,19 @@ GO 编译器依次会去 GOROOT/src，GOPATH1/src，GOPATH2/src ... 下去我们
 
 ## 项目构建
 
-项目构建全靠 GOPATH，因此就要将这个项目添加到 GOPATH
+以编译 godoc 为例
 
-GOPATH 可以配置多个的，windows 下使用;隔开，第一个 GOPATH 是用来 go get 安装全局的依赖之类的
+编译到当前目录
 
-项目下会有三个目录，分别是 src，bin，pkg
+```bash
+go build golang.org/x/tools/cmd/godoc
+```
 
-任意目录下 go build 比如 go install tmaize.net/demo 会在 src 的同级创建 pkg 目录，产生平台相关的归档文件
+编译到 GOPATH/bin
 
-注意:也可以针对某个文件使用 go build,会直接产出可执行文件
-
-go install 其实是 go build 多了一步骤，如果程序有 main 包会在 bin 目录下生成可执行文件 项目名.exe
+```bash
+go get golang.org/x/tools/cmd/godoc
+```
 
 ## 交叉编译
 
