--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -4,7 +4,7 @@ title: CentOS搭建开发环境
 categories: [Linux]
 ---
 
-Update: 2019/09/21
+Update: 2020/02/05
 
 系统版本 CentOS 7
 
@@ -14,26 +14,22 @@ Update: 2019/09/21
 
 ```sh
 yum update
-# 开发工具包
 yum groupinstall -y "Development Tools"
-yum install cmake ncurses-devel zlib* fiex* libxml* libmcrypt* libtool-ltdl-devel*
-yum install openssl openssl-devel libcurl-devel libxslt libxslt-devel
-yum install apr* autoconf automake bison bison-devel bzip2 bzip2* cloog-ppl cpp
-yum install curl curl-devel fontconfig fontconfig-devel freetype freetype*
-yum install freetype-devel gcc gcc-c++ gtk+-devel gd gettext gettext-devel
-yum install glibc kernel kernel-headers keyutils keyutils-libs-devel krb5-devel
-yum install libcom_err-devel libpng libpng* libpng-devel libjpeg* libsepol-devel
-yum install libselinux-devel libstdc++-devel libtool* libgomp libxml2 libxml2-devel libXpm* libX*
-yum install libtiff libtiff* make mpfr ntp nasm nasm*
-yum install patch pcre-devel perl yasm libmcrypt libmcrypt-devel
-yum install policycoreutils ppl telnet t1lib t1lib* wget zlib-devel readline readline-devel
-yum install libjpeg libjpeg-devel libpng libpng-devel freetype freetype-devel libcurl
-yum install mhash-devel bzip2 bzip2-devel readline-devel libedit-devel sqlite-devel gmp gmp-devel
+yum install cmake wget openssl openssl-devel
+yum install bash-completion lrzsz scl-utils
+yum install curl libcurl libcurl-devel bzip2 bzip2-deve
+yum install freetype freetype-devel libjpeg libjpeg-devel
+yum install libpng libpng-devel sqlite sqlite-devel
+```
 
-# TAB补全增强工具
-yum install bash-completion
-# 拖拽上传文件
-yum install lrzsz
+### 安装源
+
+官方源会安装在`/etc/yum.repos.d`
+
+```
+# 一些官方yum比较低的软件可以使用这里的安装高级版本
+# 使用scl命令共存多个版本
+yum install centos-release-scl
 ```
 
 ### 关闭不用的服务
@@ -498,7 +494,7 @@ mv go go_1.12.5
 GOROOT=/usr/local/go/go_1.11.10
 GOPATH=/usr/local/go/gopath
 GO111MODULE=on
-GOPROXY=https://goproxy.io
+GOPROXY=https://goproxy.cn
 PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 
 export GOROOT GOPATH GO111MODULE GOPROXY PATH
@@ -567,6 +563,48 @@ ssserver -c shadowsocks.json
 # 后台运行
 ssserver -c shadowsocks.json -d start
 ssserver -c shadowsocks.json -d stop
+```
+
+## 升级 Git
+
+CentOS 自带的 git 为 1.8.3.1，一些自动化工具需要 2.x 以上的版本，升级方法有二，重新编译安装或者添加其他源进行安装
+
+```
+yum remove git
+yum install -y https://centos7.iuscommunity.org/ius-release.rpm
+yum install -y git2u
+git --version
+```
+
+## 升级 Ruby
+
+一般系统都自带 ruby，但是太古老了，由于安装 Jekyll 要求 ruby 的版本在 2.1 以上
+
+```sh
+yum remove ruby ruby-devel
+# 官方源的ruby太古老了
+yum install centos-release-scl-rh
+yum update
+yum list | grep rh-ruby
+yum install rh-ruby26 rh-ruby26-ruby-devel
+scl -l
+scl enable rh-ruby26 bash
+ruby -v
+gem -v
+```
+
+设置 gem
+
+```sh
+# 替换为国内源，不要用淘宝的，都不维护了
+gem sources --add https://gems.ruby-china.com/
+gem sources --remove https://rubygems.org/
+gem sources --remove http://mirrors.aliyun.com/rubygems/
+gem sources -l
+gem update
+
+gem install jekyll
+gem install bundler
 ```
 
 ## 设置开机自启动脚本
