--- a/_posts/2017-07-19-面向对象与原型.md
+++ b/_posts/2017-07-19-面向对象与原型.md
@@ -4,302 +4,245 @@ title: 面向对象与原型
 categories: [前端]
 ---
 
-JavaScript的所有数据都可以看成对象，这就意味着也可以使用面向对象编程。
-
-但是JavaScript的面向对象编程和大多数其他语言如Java、C#的面向对象编程都不太一样，JavaScript不区分类和实例的概念，而是通过原型（prototype）来实现面向对象编程。
-
-
 ## 创建对象
 
-类的创建也比较简单，一共有三种方式
+对象的创建也比较简单，一共有三种方式
 
-1. 通过字面量{ ... }
+1. 通过字面量
 
-    ```
-    var Student = {
-        name: 'Robot',
-        height: 1.2,
-        run: function () {
-            console.log(this.name + ' is running...');
-        }
-    };
+   ```js
+   var Student = {
+     name: 'Robot',
+     height: 1.2,
+     run: function() {
+       console.log(this.name + ' is running...')
+     }
+   }
 
-    Student.run();
-    ```
+   Student.run()
+   ```
 
 2. 通过构造函数
 
-    除了直接用{ ... }创建一个对象外，JavaScript还可以用一种构造函数的方法来创建对象。它的用法是，先定义一个构造函数，通过new构造函数可以创建一个类
+   先定义一个构造函数，通过 new 构造函数可以创建一个类
 
-    ```
-    function Student(name) {
-        this.name = name;
-        this.hello = function () {
-            alert('Hello, ' + this.name + '!');
-        }
-    }
+   ```js
+   function Student(name) {
+     this.name = name
+     this.hello = function() {
+       alert('Hello, ' + this.name + '!')
+     }
+   }
 
-    var xiaoming = new Student('小明');
-    xiaoming.name;
-    xiaoming.hello();
-    ```
+   var xiaoming = new Student('小明')
+   xiaoming.name
+   xiaoming.hello()
+   ```
 
-3. 使用class关键字
+3. 使用 class 关键字
 
-    新的关键字class从ES6开始正式被引入到JavaScript中。class的目的就是让定义类和继承类更简单。
+   新的关键字 class 从 ES6 开始正式被引入到 JavaScript 中，让定义类和继承类更简单
 
-    ```
-    class Student {
-        constructor(name) {
-            this.name = name;
-        }
-        hello() {
-            alert('Hello, ' + this.name + '!');
-        }
-    }
+   ```js
+   class Student {
+     constructor(name) {
+       this.name = name
+     }
+     hello() {
+       alert('Hello, ' + this.name + '!')
+     }
+   }
 
-    var xiaoming = new Student('小明');
-    xiaoming.name;
-    xiaoming.hello();
-    ```
+   var xiaoming = new Student('小明')
+   xiaoming.name
+   xiaoming.hello()
+   ```
 
-## prototype与proto的理解
+## 原型与隐式原型
 
-在JS里，万物皆对象。方法（Function）是对象，方法的原型(Function.prototype)是对象。同时它们都会有一个`__proto__`属性，称为隐式原型
+`prototype` 称为原型
 
-一个对象的隐式原型指向构造该对象的构造函数的原型，这也保证了实例能够访问在构造函数原型中定义的属性和方法。
+`__proto__` 称为隐式原型
 
-```
-var a = {name:1}
+prototype 是构造函数的属性，而 `__proto__` 是对象的属性
 
-a.__proto__指向Object
+为了实现继承，因此对象的隐式原型指向构造函数的原型
 
-而Object正是构成a的函数（function Object(){}）的原型，
-
-同时Object的constructor指向（function Object(){}）
-```
-
-所以自定义的对象是由其他自定义对象继承而来，或者直接由一个Object拓展而来，不管怎样同时往上找必有一对`Object和function Object(){}`
-
-```
-var b = {name:2}
-
-var a = {name:1}
-
-a.__proto__=b;
-
-往上找
-a//{name=1}
-a.__proto__//{name=2}
-a.__proto__.__proto__//Object
-a.__proto__.__proto__.__proto__//null
-```
-
-综上，我们也可以自己定义那么一对`Object和function Object(){}`。通过自定义函数，同时通过new的方式来产生自己想要的自定义对象
-
-为了实现这样的需求，js中方法还有自己特有的属性——原型属性（prototype）这个属性是一个指针，指向一个对象（刚好一对，默认prototype指向一个Object，Object的constructor指向函数），这个对象的用途就是包含所有实例共享的属性和方法（我们把这个对象叫做原型对象）
-
-```
-function b(){this.name=1}//构造函数
-
-var bb = new b();
-
-首先把b里面所有的this内容绑定（可以理解为移动）到bb中
-
-b的prototype指向一个默认的Object
-
-然后bb的__proto__指向这个Object
-
-Object的constructor指向b
-```
-
-或者更复杂一些
-
-```
-var a = {name:2}
-
-function b(){this.name=1}//构造函数
-
-b.prototype = a;
-
-var bb = new b();
-
-首先把b里面所有的this内容绑定（移动）到bb中
-
-然后设置了b.prototype = a，所以把bb的__proto__指向a
-
-bb//{name:1}
-bb.__proto__//{name:2}
-bb.__proto__==a//true
-
-bb里面并没有bb.constructor
-
-bb.constructor时他会往上找，bb.__proto__<==>a，a的proto里面有
-
-所以bb.constructor<==>a.__proto__.constructor
-```
-
-![p1](01.jpg)
-
-## 继承
-
-在传统的基于Class的语言如Java、C++中，继承的本质是扩展一个已有的Class，并生成新的Subclass。
-
-由于这类语言严格区分类和实例，继承实际上是类型的扩展。
-但是，JavaScript由于采用原型继承，我们无法直接扩展一个Class，因为根本不存在Class这种类型。
-在JavaScript中所谓继承关系不过是把一个对象的原型指向另一个对象而已。
-
-理解了prototype与proto创建继承就很简单了
-
-下面是创建原型继承的最简单的一种方法
-
-```
-var Student = {
-    name: 'Robot',
-    height: 1.2,
-    run: function () {
-        console.log(this.name + ' is running...');
-    }
-};
-
-//等价为var xx = {},xx.name="xm"
-//xxxx.__proto__=Student
-//不推荐这样做，按照下面的方法做
-function createStudent(name) {
-    // 基于Student原型创建一个新对象:
-    var s = Object.create(Student);
-    // 初始化新对象:
-    s.name = name;
-    return s;
+```js
+function Person(age) {
+  this.age = age || 0
 }
-
-var xiaoming = createStudent('小明');
-xiaoming.run(); // 小明 is running...
-xiaoming.__proto__ === Student; // true
+Person.prototype.print = function() {
+  console.log('age', this.age)
+}
+let p = new Person(18)
+console.log(p.__proto__ == Person.prototype)
+console.log(p.print())
 ```
 
-或者通过构造函数的方法来继承
+你甚至可以这样做
+
+```js
+let arr = { 0: 'zs', 1: 'ls', length: 2 }
+console.log(arr)
+
+// 强制改成Array
+arr.__proto__ = Array.prototype
+console.log(arr)
+arr.push('we')
+console.log(arr)
+```
+
+同时构造函数也是一个对象，他也具有`__proto__`属性
+
+```js
+Person.__proto__ == Function.prototype
+```
+
+对于基础构造函数的`__proto__`属性
+
+```js
+// 全是 ƒ () { [native code] } 都相等
+console.log(Object.__proto__)
+console.log(Function.__proto__)
+console.log(Array.__proto__)
+console.log(Number.__proto__)
+console.log(Date.__proto__)
+
+[native code].__proto__ == Object.prototype
+```
+
+对于基础构造函数的`prototype`属性
+
+```js
+Number.prototype // Object(0)
+String.prototype // Object("")
+Boolean.prototype // Object(false)
+Array.prototype // []
+Function.prototype // function(){}
+Date.prototype // new Date(NaN)
+```
+
+## 属性/方法继承
+
+通过原型可以清晰的发现有一条链式关系
+
+```js
+let arr = new Array(1, 2)
+app.push(3)
+console.log(arr.__proto__ == Array.prototype)
+console.log(Array.prototype.__proto__ == Object.prototype)
+console.log(Object.prototype.__proto__ == null)
+```
+
+这个就是原型链
 
 ```
-var StudentCommon = {
-    name: 'Robot',
-    height: 1.2,
-    run: function () {
-        console.log(this.name + ' is running...');
-    }
-};
+arr ---> Array.prototype ---> Object.prototype ---> null
+```
 
+当执行 push 方法的时候会顺着原型链去查找 push 的定义
+
+```js
+// arr.push实际调用的是Array.prototype里面定义的方法
+window.Array.prototype.push.call(arr, 3)
+```
+
+对于两个类是否具有继承关系，看他们的原型链就行了
+
+```js
 function Student(name) {
-    this.name = name;
+  this.name = name
 }
-
-Student.prototype = StudentCommon;
-
-var xiaoming = new Student("小明");
-```
-
-再或者通过ES6新引入的class和extends
-
-它原有的JavaScript原型继承有实际上没有任何区别，class的作用就是让JavaScript引擎去实现原来需要我们自己编写的原型链代码。简而言之，用class的好处就是极大地简化了原型链代码。
-
-```
-class Student {
-    constructor(name) {
-        this.name = name;
-    }
-    hello() {
-        alert('Hello, ' + this.name + '!');
-    }
-}
-
-class PrimaryStudent extends Student {
-    constructor(name, grade) {
-        super(name); 
-        this.grade = grade;
-    }
-    myGrade() {
-        alert('I am at grade ' + this.grade);
-    }
-}
-var xiaoming = new PrimaryStudent('小明',1);
-xiaoming.name;
-xiaoming.hello();
-xiaoming.myGrade();
-```
-
-## 原型链
-
-当我们用obj.xxx访问一个对象的属性时，JavaScript引擎先在当前对象上查找该属性，如果没有找到，就遍历原型对象proto，如果还没有找到，就一直上溯proto直到null
-
-通过上面的说明就不难理解所谓的原型链了
-
-上面Student类的原型链如下
-
-```
-xiaoming ↘
-xiaohong -→ Student.prototype ----> Object.prototype ----> null
-xiaojun  ↗
-```
-
-一个数组的原型链如下
-
-```
-var arr = [1, 2, 3];
-arr ----> Array.prototype ----> Object.prototype ----> null
-```
-
-## 构造方法继承构造方法
-
-```
-function Student(name) {
-    this.name = name;
-}
-
+// 绑定，不是继承
 function GoodStudent(name) {
-    Student.call(this, name);//绑定
-    this.start = 5;
+  this.start = 5
+  Student.call(this, name)
 }
-
-var xiaoming = new GoodStudent("小明");
-//GoodStudent {name: "小明", start: 5}
-```
-
-但是，调用了Student构造函数不等于继承了Student，
-
-```
-GoodStudent创建的对象的原型是：
-
-new GoodStudent() ----> GoodStudent.prototype ----> Object.prototype ----> null
-
-必须想办法把原型链修改为：
-
-new GoodStudent() ----> GoodStudent.prototype ----> Student.prototype ----> Object.prototype ----> null
-```
-
-通过下面的方法的方式可以实现效果，感觉又不太符合JavaScript继承的思想
-
-```
-function Student(name) {
-    this.name = name;
-}
-
+// 这才是继承
 function GoodStudent(name) {
-    this.start = 5;
-    //this.__proto__ = Object.create(new Student(name));多了一层
-    this.__proto__ = new Student(name);
+  this.start = 5
+  this.__proto__ = new Student(name)
 }
-
-//GoodStudent.prototype = new Student(name);name传递不过来
-
-var xiaoming = new GoodStudent("小明");
 ```
 
-还有一种方法就是使用过桥函数F(){}，好处是是为了清空构造函数里的属性，设置原型就会包含一些不必要的原Student构造函数上的属性
+## new 的过程
+
+有时候会很好奇，构造函数里面的 this 怎么就可以把属性绑定到对象上面呢
+
+其实在 new 的过程中通过 call 或者 apply 的方式 this 映射到对象上，然后去调用 constructor
+
+```js
+let p = new Person(18)
+
+// 等价于
+let p = Object.create(Person.prototype)
+// p.__proto__ == Person.prototype
+p.constructor.call(p, 18)
+// Person.call(p,18)
+```
+
+## instanceof
+
+instanceof 的左值一般是一个对象，右值一般是一个构造函数，用来判断左值是否是右值的实例
+
+```js
+var arr = [1, 2, 3]
+// true
+console.log(arr instanceof Array)
+// true
+console.log(arr instanceof Object)
+```
+
+它的判断依据如下
+
+```
+L.__proto__.[__proto__ ...] === R.prototype
+```
+
+所以就不难理解
+
+```js
+// Object.__proto__     [Native Code]
+// Function.prototype   [Native Code]
+// Function.__proto__   [Native Code]
+console.log(Object instanceof Function) // true
+console.log(Function instanceof Function) // true
+console.log(Function instanceof Function) // true
+
+// Number.__proto__                   [Native Code]
+// [Native Code].__proto__            Object.prototype
+// [Native Code].__proto__.__proto__  null
+console.log(Number instanceof Number) // false
+```
+
+## 总结
+
+如果浏览器版本支持，最好使用 ES6 新提供的 class 关键字去定义类
+
+如果弄不清 this 的指向，可以直接使用箭头函数
+
+```js
+class Person extends Object {
+  // 定义类属性
+  name = '临时姓名'
+  constructor(age) {
+    super()
+    // 定义类属性
+    this.age = age || 0
+  }
+  // 静态方法
+  static Hello() {
+    console.log('hello')
+  }
+}
+console.log(new Person(18))
+```
 
 ## 参考
 
-> [知乎doris的回答](https://www.zhihu.com/question/34183746/answer/58155878)
+[JS 中 proto 和 prototype 存在的意义是什么](https://www.zhihu.com/question/56770432)
 
-> [廖雪峰的JavaScript教程](https://www.liaoxuefeng.com/wiki/001434446689867b27157e896e74d51a89c25cc8b43bdb3000/001434499763408e24c210985d34edcabbca944b4239e20000)
+[为什么 Function.prototype 可以直接执行](https://www.zhihu.com/question/323462380/answer/682017098)
 
-> [阮一峰的网络日志](http://www.ruanyifeng.com/blog/2010/05/object-oriented_javascript_encapsulation.html)
+[阮一峰的网络日志](http://www.ruanyifeng.com/blog/2010/05/object-oriented_javascript_encapsulation.html)
