--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -117,11 +117,20 @@ _斜体_
 
 ## 图片
 
-![测试图片](001.jpg)
+破事水![line](emoji_01.png)
+滑稽![line](emoji_02.png)
 
+```md
+![line](http://xx.com/xx.jpg)
 ```
+
+块级别图片
+
+```md
 ![测试图片](001.jpg)
 ```
+
+![测试图片](001.jpg)
 
 ## 代码行
 
