--- a/_posts/2020-02-29-go-gui.md
+++ b/_posts/2020-02-29-go-gui.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 用Go写GUI程序
-categories: [Go]
+categories: [Go, GUI]
 ---
 
 平时自己写的工具要么是网页，要么是命令行，使用起来还是感觉不够方便。于是就 Google 了下能够使用 Go 来写 GUI 的库
