--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -15,8 +15,8 @@ Update: 2020/02/05
 ```sh
 yum update
 yum groupinstall -y "Development Tools"
-yum install cmake wget openssl openssl-devel
-yum install bash-completion lrzsz scl-utils
+yum install cmake wget openssl openssl-devel yum-utils
+yum install bash-completion lrzsz scl-utils screen
 yum install curl libcurl libcurl-devel bzip2 bzip2-deve
 yum install freetype freetype-devel libjpeg libjpeg-devel
 yum install libpng libpng-devel sqlite sqlite-devel
@@ -30,6 +30,20 @@ yum install libpng libpng-devel sqlite sqlite-devel
 # 一些官方yum比较低的软件可以使用这里的安装高级版本
 # 使用scl命令共存多个版本
 yum install centos-release-scl
+```
+
+### yum 常用命令
+
+```bash
+yum list [all,installed,available,updates,extras]
+yum install <packages>              # 安装指定的包
+yum deplist <packages>              # 显示软件包的依赖信息
+yum remove <packages>               # 卸载指定的软件包
+yum info <packages>                 # 查看软的信息
+yum search <keywords>               # 根据关键字查找，xx*以xx开头，想要支持正则可以使用yum list all | grep xxx
+yum provides <keywords>             # 反查包含特定文件名的包
+yum clean all                       # 清除yum缓存
+yum makecache                       # 建立索引
 ```
 
 ### 关闭不用的服务
@@ -54,17 +68,38 @@ yum install centos-release-scl
   systemctl disable firewalld
   ```
 
-### 更改 ssh 端口
+### SSH 配置
 
 不建议使用用户名+密码的方式登陆，容易被人扫描暴力破解
 
-为了使用方便还是不设置密钥登陆，但是一定要更改下默认的 22 端口
+可以同时开启密码认证和公钥认证
 
 ```sh
-# 更改配置项Port 8022
+# Port 22  sshd服务端口，建议改掉
+# PubkeyAuthentication yes 允许公钥登陆，公钥配置到AuthorizedKeysFile指定的文件
+# PermitRootLogin yes 允许root登陆
+# PasswordAuthentication yes 密码登陆
 vi /etc/ssh/sshd_config
 # 重启服务
 service sshd restart
+```
+
+在服务器 authorized_keys 文件中新添加一行公钥
+
+```bash
+chmod 700 ~/.ssh
+chmod 600 ~/.ssh/authorized_keys
+```
+
+本地机器配置，`C:\Users\xxx\.ssh\config` 文件配置好后直接`ssh aliyun`即可登陆
+
+```
+Host aliyun
+     HostName 106.xxx.xxx.xxx
+     User root
+     Port 22
+     IdentityFile C:/Users/xxx/.ssh/id_rsa_nopwd
+     PreferredAuthentications publickey
 ```
 
 ### 中文支持
@@ -231,7 +266,7 @@ grep 'temporary password' /var/log/mysqld.log
 # 登陆
 mysql -u root -p
 
-# 允许设置简单密码，重启后改配置失效
+# 允许设置简单密码，重启后该配置失效
 set global validate_password_policy=0;
 set global validate_password_length=4;
 
@@ -588,7 +623,7 @@ yum update
 yum list | grep rh-ruby
 yum install rh-ruby26 rh-ruby26-ruby-devel
 scl -l
-scl enable rh-ruby26 bash
+scl enable rh-ruby26 bash # 关机/退出bash失效
 ruby -v
 gem -v
 ```
