--- a/_posts/2019-09-29-程序后台运行的几种方法.md
+++ b/_posts/2019-09-29-程序后台运行的几种方法.md
@@ -169,48 +169,92 @@ tmux ls
 
 > Systemd 是 Linux 系统工具，用来启动守护进程，已成为大多数发行版的标准配置
 
-所有的服务的配置文件都存放在`/usr/lib/systemd/system/`，开机启动的服务在`/etc/systemd/system/`。通过`systemctl enable` 命令用于在上面两个目录之间，建立符号链接关系，来设置一个服务的开机启动
+所有的服务的配置文件都存放在`/usr/lib/systemd/system/`，设置开机启动后会在`/etc/systemd/system/multi-user.target.wants`符号链接
 
-1. 创建启动脚本 test123.sh
+常用管理命令：
 
-   ```
-   #!/bin/bash
-   ping baidu.com > /server-apps/ping.log
-   ```
+```bash
+# 新增配置文件后用于刷新配置
+systemctl daemon-reload
+systemctl start app-web1.service
+systemctl stop app-web1.service
+# 查看所有日志
+tail -f /var/log/messages
+# 查看指定服务日志
+journalctl -u app-web1.service
+```
 
-2. 在/usr/lib/systemd/system 创建服务，命名为 test123.service
+常用配置写法，如下`app-web1.service`
 
-   ```ini
-   [Unit]
-   Description=Test123
+```conf
+[Unit]
+Description=演示网站1
+After=network-online.target mysqld.service
+Wants=mysqld.service
 
-   [Service]
-   Type=simple
-   ExecStart=/bin/bash /server-apps/test123.sh
+[Service]
+Type=simple
+WorkingDirectory=/root/
+# ExecStart必须是绝对路径,否则直接报错
+ExecStart=/root/go-live-server -p 8080 -d www
+KillMode=process
+Restart=on-failure
+RestartSec=1min
 
-   [Install]
-   WantedBy=multi-user.target
-   ```
+[Install]
+WantedBy=multi-user.target
+```
 
-3. 启动服务
+为了简化操作，可以通过一个脚本来管理服务的安装与启动
 
-   ```shell
-   # 新添加 unit 配置文件,或者有 unit 的配置文件发生变化时都需要执行
-   systemctl daemon-reload
-   systemctl start test123.service
-   systemctl stop test123.service
-   ```
+```bash
+#!/bin/bash
+sName="app-web1.service"
+installPath="/usr/lib/systemd/system/"
 
-4. 日志查看
+echo "管理服务： ${sName}"
+echo "命令： [status|start|stop|restart|enable|disable, log, install, uninstall]"
 
-   ```shell
-   # 方式1
-   tail -f /var/log/messages
-   # 方式2
-   journalctl -u test123.service
-   ```
+echo -n "请输入操作:"
+read input
 
-5. 如果要避免多次启动，可以在脚本运行后生成 pid 文件，然后再配置中配置 pid 文件的位置
+case $input in
+  status|start|stop|restart|enable|disable)
+    if [ ! -f "${installPath}${sName}" ];then
+      echo "文件不存在: ${installPath}${sName}"
+    else
+      echo "systemctl $input $sName"
+      systemctl $input $sName
+    fi
+    ;;
+  log)
+    echo "journalctl -f -u $sName"
+    journalctl -f -u $sName
+    ;;
+  install)
+    echo "cp ${sName} ${installPath}"
+    cp ${sName} ${installPath}
+    echo "systemctl daemon-reload"
+    systemctl daemon-reload
+    ;;
+  uninstall)
+    if [ ! -f "${installPath}${sName}" ];then
+      echo "文件不存在,无需卸载"
+    else
+      echo "systemctl stop $sName"
+      systemctl stop $sName
+      echo "systemctl disable $sName"
+      systemctl disable $sName
+      echo "rm ${installPath}${sName}"
+      rm ${installPath}${sName}
+      systemctl daemon-reload
+    fi
+    ;;
+  *)
+    echo "不支持的命令: $input"
+    ;;
+esac
+```
 
 ## Supervisor 工具
 
