--- a/_posts/2019-09-29-程序后台运行的几种方法.md
+++ b/_posts/2019-09-29-程序后台运行的几种方法.md
@@ -171,9 +171,13 @@ tmux ls
 
 所有的服务的配置文件都存放在`/usr/lib/systemd/system/`，设置开机启动后会在`/etc/systemd/system/multi-user.target.wants`符号链接
 
-常用管理命令：
+命令格式`systemctl [OPTIONS...] COMMAND [UNIT...]`：
 
 ```bash
+# 列出所有unit文件
+systemctl list-unit-files
+# 当前已加载到内存中的unit
+systemctl list-units
 # 新增配置文件后用于刷新配置
 systemctl daemon-reload
 systemctl start app-web1.service
@@ -264,8 +268,12 @@ esac
 
 [Linux 技巧：让进程在后台运行更可靠的几种方法](https://www.ibm.com/developerworks/cn/linux/l-cn-nohup/)
 
-[Linux 守护进程的启动方法](http://www.ruanyifeng.com/blog/2016/02/linux-daemon.html)
-
 [tmux 常用命令](https://www.cnblogs.com/lizhang4/p/7325086.html)
 
+[Linux 守护进程的启动方法](http://www.ruanyifeng.com/blog/2016/02/linux-daemon.html)
+
 [Systemd 入门教程：命令篇](http://www.ruanyifeng.com/blog/2016/03/systemd-tutorial-commands.html)
+
+[Systemd 入门教程：实战篇](http://www.ruanyifeng.com/blog/2016/03/systemd-tutorial-part-two.html)
+
+[systemctl 中文手册](http://www.jinbuguo.com/systemd/systemctl.html)
