--- a/_posts/2018-07-08-go笔记.md
+++ b/_posts/2018-07-08-go笔记.md
@@ -678,20 +678,21 @@ func main() {
 
 在并发编程中，通信是保证数据正确的重要手段，golang 提供了 channel 的方式来实现通讯，当然他是线程安全的
 
-下面是一个简单的无缓冲的通道，注意这是无缓冲的，意味着直接读，直接写都会引起阻塞，如果在一个线程内直接进行读/写或者写/读会导致进程 deadlock
+下面是一个简单的无缓冲的通道。注意这是无缓冲的，在一个 goroutine 内进行，读/写/读写/写读操作都会 deadlock。正确的做法是在两个 goroutine 内进行读写，但注意一定要先启动 goroutine，不然就阻塞住了
 
-```
+```go
 c := make(chan int)
+log.Println("start")
 go func() {
-    c <- 1
+	time.Sleep(time.Second * 5)
+	c <- 1
 }()
-i := <-c
-fmt.Println(i)
+log.Println("end", <-c)
 ```
 
 下面是有缓冲的通道，在通道为空读，通道为满写的时候都是阻塞的，因此下面写入不阻塞，读取不阻塞
 
-```
+```go
 c := make(chan int, 1)
 c <- 1
 i := <-c
