--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -339,7 +339,7 @@ SHOW VARIABLES LIKE 'validate_password%';
 
 ### JDK 安装
 
-先查询是否已经安装了 JDK 环境
+先查询是否已经安装了 JDK 环境，如果需要安装其他版本的卸载即可
 
 ```bash
 rpm -qa | grep jdk
@@ -347,13 +347,11 @@ rpm -qa | grep java
 yum -y remove java*
 ```
 
-去 Oracle 官网下载 rpm 包，这里下载的是 jdk-8u191-linux-x64.rpm，默认会安装到`/usr/java/`目录下
+推荐去华为镜像地址下载[https://mirrors.huaweicloud.com/java/jdk/8u202-b08/](https://mirrors.huaweicloud.com/java/jdk/8u202-b08/)
 
-```bash
-rpm -ivh jdk-8u191-linux-x64.rpm
-```
+Oracle 官网不要去了，还要注册。另外 JDK8 之后，Oracle-JDK 就只支持商用了，但是 JDK 是开源的有其他的替代品，如 OpenJDK,Zulu,这里有个下载地址汇总的网站：[https://www.injdk.cn/](https://www.injdk.cn/)
 
-另一种方案是安装 OpenJdk，使用 yum 就可以直接安装了
+可以使用 yum 直接安装 OpenJdk
 
 ```bash
 yum list java* | grep 1.8.0
@@ -364,28 +362,22 @@ yum install java-1.8.0-openjdk-devel.x86_64
 
 安装完成后，还会在`/usr/lib/jvm/`，`/etc/alternatives/`创建多个链接
 
+推荐直接绿色安装
+
+然后配置下环境即可，好处是方便装多个版本进行切换，个人喜欢解压到`/usr/local/java/`
+
 ### 环境变量配置
 
-修改`/etc/profile`文件，后面追加如下内容
+修改`/etc/profile`文件，后面追加如下内容，修改完后`source /etc/profile;echo $JAVA_HOME`
 
 ```sh
-JAVA_HOME=/usr/java/jdk1.8.0_191-amd64
-JRE_HOME=${JAVA_HOME}/jre
-CLASSPATH=.:${JAVA_HOME}/lib:\${JRE_HOME}/lib
+JAVA_HOME=/usr/local/java/jdk1.8.0_202
+JRE_HOME=/usr/local/java/jdk1.8.0_202/jre
+CLASSPATH=.:$JAVA_HOME/lib/*
 
-# PATH=${JAVA_HOME}/bin:$PATH
+PATH=$PATH:$JAVA_HOME/bin
 
-export JAVA_HOME JRE_HOME CLASSPATH
-```
-
-由于是 rpm 安装，`${JAVA_HOME}/bin`下的命令已经链接到了`/usr/bin` 下面，无需再设置`PATH=${JAVA_HOME}/bin:$PATH`
-
-为了防止别的软件使用`JAVA_HOME`等化境变量，这个我们定义然后导出下就行了
-
-修改完后 source 下立即生效
-
-```sh
-source /etc/profile
+export JAVA_HOME JRE_HOME CLASSPATH PATH
 ```
 
 ### Tomcat 安装
