--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -373,11 +373,10 @@ yum install java-1.8.0-openjdk-devel.x86_64
 ```sh
 JAVA_HOME=/usr/local/java/jdk1.8.0_202
 JRE_HOME=/usr/local/java/jdk1.8.0_202/jre
-CLASSPATH=.:$JAVA_HOME/lib/*
 
 PATH=$PATH:$JAVA_HOME/bin
 
-export JAVA_HOME JRE_HOME CLASSPATH PATH
+export JAVA_HOME JRE_HOME PATH
 ```
 
 ### Tomcat 安装
