--- a/_posts/2017-08-04-用maven构建项目.md
+++ b/_posts/2017-08-04-用maven构建项目.md
@@ -304,6 +304,7 @@ Packaging决定了是web项目还是java项目，选错了没关系，在pom.xml
 				<encoding>utf-8</encoding>
 			</configuration>
 		</plugin>
+	</plugins>
 </build>
 <!-- 依赖 -->
 <dependencies>
