--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -556,6 +556,56 @@ npm config set cache "/usr/local/nodejs/node_cache"
 npm install -g hexo-cli
 ```
 
+## Python3
+
+centos7 默认自带 python2.x，同时 yum 依赖 2.x 版本的。所以想要使用 python3 可以通过起个新名字来使用，比如 py3。或者把 python 的软链接替换掉，但是要修改`/usr/bin/yum` 脚本中声明的运行环境
+
+注意在`/usr/bin/`目录下共有 6 个 python 相关命令
+
+```sh
+python    # python2.7 的软链接
+python2   # python2.7 的软链接
+python2.7 # 二进制文件
+
+pip       # python脚本，指明使用python2
+pip2      # python脚本，指明使用python2
+pip2.7    # python脚本，指明使用python2
+```
+
+下面开始安装
+
+```sh
+wget https://www.python.org/ftp/python/3.7.7/Python-3.7.7.tgz
+tar -zxvf Python-3.7.7.tgz
+cd Python-3.7.7
+./configure --enable-optimizations
+make altinstall # altinstall 不会只会向/usr/bin/写入python的符号链接
+# 默认
+```
+
+安装后的一些目录
+
+```sh
+/usr/local/bin
+/usr/local/lib/python3.7
+```
+
+为了系统不受影响，检查下 python 版本
+
+```sh
+python -V # Python 2.7.5
+pip -V    # python 2.7
+```
+
+创建 python3 的符号链接
+
+```sh
+ln -s /usr/local/bin/python3.7 /usr/bin/python3
+ln -s /usr/local/bin/pip3.7 /usr/bin/pip3
+pip3 install pip -U
+pip3 config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+```
+
 ## Shadowsocks
 
 推荐安装 SSR，图省事可以使用[一键安装脚本](ssr.sh)
