--- a/_posts/2020-04-29-webview中键盘适配的一些坑.md
+++ b/_posts/2020-04-29-webview中键盘适配的一些坑.md
@@ -27,7 +27,7 @@ protected void onCreate(Bundle savedInstanceState) {
 ```xml
 <activity
     android:name=".MainActivity"
-    android:windowSoftInputMode="stateVisible|adjustResize">
+    android:windowSoftInputMode="adjustResize">
     <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
