--- a/_posts/2019-07-27-用Termux拯救你的闲置手机.md
+++ b/_posts/2019-07-27-用Termux拯救你的闲置手机.md
@@ -106,15 +106,23 @@ pkg files <package>             显示某个包的相关文件夹路径
 
 ## 基本使用
 
-换成国内源
+速度慢的话可以换成国内源，注意有梯子话推荐使用默认源，不然可能会有一些奇怪的 bug
 
 ```
 vi  $PREFIX/etc/apt/sources.list
-
-# 内容如下
-# The main termux repository:
+# 修改为
 # deb https://termux.net stable main
-deb http://mirrors.tuna.tsinghua.edu.cn/termux stable main
+deb https://mirrors.tuna.tsinghua.edu.cn/termux/termux-packages-24 stable main
+
+vi  $PREFIX/etc/apt/sources.list.d/science.list
+# 修改为
+# deb https://dl.bintray.com/grimler/science-packages-21 science stable
+deb https://mirrors.tuna.tsinghua.edu.cn/termux/science-packages-24 science stable
+
+vi  $PREFIX/etc/apt/sources.list.d/game.list
+# 修改为
+# deb https://dl.bintray.com/grimler/game-packages-21 games stable
+deb https://mirrors.tuna.tsinghua.edu.cn/termux/game-packages-24 games stable
 ```
 
 安装常用工具
@@ -131,6 +139,12 @@ pkg install curl wget git unzip golang nodejs
 # 会把 SD 卡下常用几个目录给链接进去
 # 当然也可以使用绝对路径去访问，一般是/storage/emulated/0/
 termux-setup-storage
+```
+
+当锁屏后，使用ssh远程连接输命令会特别卡，使用下面命令可以解决
+
+```
+termux-wake-lock
 ```
 
 目录结构说明
@@ -169,3 +183,7 @@ set GOARCH=arm
 ```
 
 另外如果想公网访问可以使用 Ngrok 等服务
+
+## 参考
+
+[Termux 高级终端安装使用配置教程](https://www.sqlsec.com/2018/05/termux.html)
