--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -16,7 +16,7 @@ Update: 2020/02/05
 yum update
 yum groupinstall -y "Development Tools"
 yum install cmake wget openssl openssl-devel yum-utils
-yum install bash-completion lrzsz scl-utils screen
+yum install bash-completion lrzsz scl-utils screen net-tools telnet
 yum install curl libcurl libcurl-devel bzip2 bzip2-deve
 yum install freetype freetype-devel libjpeg libjpeg-devel
 yum install libpng libpng-devel sqlite sqlite-devel
